# Ruls-Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Ruls_Template/: JR_WindowsManager.cpp  Ruls_Template.sln  Ruls_Template.vcxproj
source/: CMakeLists.txt  JR_Input.cpp  JR_WindowAndRenderer.cpp  JR_WindowsManager.cpp
